output from 'make generate'
